# ml-digits

./: .gitignore  Dockerfile  README.md  pyproject.toml
app/: main.py
app/api/v1/db/: dummy.py  protocol.py  sqlite.py
app/api/v1/endpoints/: analytics.py  predict.py
app/api/v1/exceptions/: exceptions.py
app/api/v1/models/: svm_digits_model.pkl
app/api/v1/schemas/: image_schema.py
app/api/v1/services/: process_image.py
app/api/v1/utils/: process_image.py  query_time.py
tests/: conftest.py  test_api.py  test_process_image.py
