[project]
name = "ml-digits"
version = "0.1.0"
description = ""
authors = [
    {name = "Valeriy Provkov",email = "provkovvaleriy@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<3.10"
dependencies = [
    "fastapi (>=0.115.6,<0.116.0)",
    "numpy (==2.0.2)",
    "joblib (>=1.4.2,<2.0.0)",
    "scikit-image (==0.24.0)",
    "scikit-learn (>=1.6.0,<2.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "pydantic (>=2.10.4,<3.0.0)",
]

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
httpx = "^0.28.1"
pytest-asyncio = "^0.25.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.10.0"]
build-backend = "poetry.core.masonry.api"


